--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query-devtools": "^5.53.1",
     "axios": "^1.7.5",
     "eslint-config-prettier": "^9.1.0",
+    "framer-motion": "^11.3.31",
     "next": "14.2.7",
     "prettier": "^3.3.3",
     "react": "^18",
