--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.5",
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^11.3.31",
+    "moment": "^2.30.1",
     "next": "14.2.7",
     "prettier": "^3.3.3",
     "react": "^18",
